# myapp

./: .gitignore  CMakeLists.txt  ChangeLog  Jenkinsfile  Makefile.am  PKGBUILD  README.md  SConstruct  build.sh  configure.ac  meson.build  mkdebpkg.sh  myapp.spec  requirements.txt
src/: CMakeLists.txt  myapp.c
tests/: .gitignore  01-simple.sh  02-simple.sh  Makefile.am  trs2junit
